--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@taquito/signer": "^9.1.1",
     "@taquito/taquito": "^9.2.0",
+    "@taquito/tzip16": "^11.0.1",
     "dotenv": "^10.0.0",
     "fs": "0.0.2",
     "yargs": "^17.0.1",
-    "mocha": "^9.0.0"
+    "mocha": "^9.0.0",
+    "keccak": "^3.0.2",
+    "keccak256": "^1.0.3"
   },
    "engines": {
     "node": "^14.17.1",
