replaced field signers with approved_claimers

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 BRIDGE_MANAGER="tz1VSUr8wwNhLAzempoch5d6hLRiTh8Cjcjb"
 STOP_MANAGER="tz1VSUr8wwNhLAzempoch5d6hLRiTh8Cjcjb"
 FEE_COLLECTOR="tz1VSUr8wwNhLAzempoch5d6hLRiTh8Cjcjb"
-SIGNER="tz28YZoayJjVz2bRgGeVjxE8NonMiJ3r2Wdu"
+VALIDATOR_PK="sppk7aMNM3xh14haqEyaxNjSt7hXanCDyoWtRcxF8wbtya859ak6yZT"
