--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ BRIDGE_MANAGER="tz1VSUr8wwNhLAzempoch5d6hLRiTh8Cjcjb"
 STOP_MANAGER="tz1VSUr8wwNhLAzempoch5d6hLRiTh8Cjcjb"
 FEE_COLLECTOR="tz1VSUr8wwNhLAzempoch5d6hLRiTh8Cjcjb"
 VALIDATOR_PK="sppk7aMNM3xh14haqEyaxNjSt7hXanCDyoWtRcxF8wbtya859ak6yZT"
+APPROVED_CLAIMER="tz1gKYy8uwdBHp9iw1PNiH7AJmzsvcVtmpwR"
