--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "compile": "yarn clean && node scripts/cli.js compile && node scripts/cli.js compileTest",
     "migrate": "yarn compile && node scripts/cli.js migrate",
     "test": "mocha --bail",
-    "start-sandbox": "docker run --rm --name dev-sandbox -e flextesa_node_cors_origin='*' -e block_time=1 --detach -p 8732:20000 tqtezos/flextesa:20211119 hangzbox start",
+    "start-sandbox": "docker run --rm --name dev-sandbox -e flextesa_node_cors_origin='*' -e block_time=1 --detach -p 8732:20000 oxheadalpha/flextesa:latest ithacabox start",
     "stop-sandbox": "docker kill dev-sandbox"
   },
   "repository": {
