--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "Bridge",
   "dependencies": {
-    "@taquito/signer": "^11.0.1",
-    "@taquito/taquito": "^11.0.1",
-    "@taquito/tzip16": "^11.0.1",
-    "dotenv": "^10.0.0",
+    "@taquito/signer": "11.0.1",
+    "@taquito/taquito": "11.0.1",
+    "@taquito/tzip16": "11.0.1",
+    "dotenv": "10.0.0",
     "fs": "0.0.2",
-    "keccak256": "^1.0.3",
-    "mocha": "^9.0.0",
-    "yargs": "^17.0.1"
+    "keccak256": "1.0.3",
+    "mocha": "9.0.0",
+    "yargs": "17.0.1"
   },
   "engines": {
     "yarn": "^1.22.10"
