--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "yargs": "17.0.1"
   },
   "engines": {
-    "yarn": "^1.22.10"
+    "yarn": "1.22.10"
   },
   "scripts": {
     "clean": "rm -rf ./builds",
